@@ -151,7 +151,8 @@ krusaderlocal_DATA = \
 	total_commander.color \
 	total_commander.keymap \
 	total_commander.keymap.info \
-	useractions.xml
+	useractions.xml \
+	splash.jpg
 
 
 
