@@ -1,3 +1,5 @@
+    ADDED: winning icons, SVGs and fixed code to use them
+    ADDED: DUMMY splash screen (krusader/splash.jpg) which will be replaced later
     FIXED: terminal emulator saves its size from now
     FIXED: hiding the full size terminal emulator cannot restore the panels
     FIXED: terminal emulator has no focus after toggling it on
